[INF-94] fix menu spacing

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -237,6 +237,7 @@ nav.tabs li.is-active {
     padding: 0.25em 0 0.25em 0;
     a {
       padding-left: 2em;
+      border-left: 5px solid transparent;
 
       &.is-active, &.router-link-active {
         border-left: 5px solid $info;
